--- a/todo-list-backend/todo-list-backend.csproj
+++ b/todo-list-backend/todo-list-backend.csproj
@@ -1,14 +1,12 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>todo_list_backend</RootNamespace>
+    <UserSecretsId>7a22733c-16ae-4238-a889-b329e5ecbabf</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="JWT" Version="7.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.5" />
   </ItemGroup>
-
-
 </Project>
